--- a/ejs/contacts.ejs
+++ b/ejs/contacts.ejs
@@ -19,6 +19,7 @@
                           CONTENT
 =========================================================-->
         <section id="content" class="common">
+            <div class="overlay"></div>
             <div class="wrapper1 wrapper1__inset3">
                 <div class="heading1 fadeIn">
                     <h2>
@@ -86,12 +87,12 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="<%= en %>../js/app.js"></script>
-            <script src="<%= en %>../js/intersectionObservers.js"></script>
-            <script src="<%= en %>../js/headerNavbar.js"></script>
-            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
-            <script src="<%= en %>../js/mapPorto.js"></script>
-            <script src="<%= en %>../js/languange.js"></script>
+            <script src="<%= otherLang %>../js/app.js"></script>
+            <script src="<%= otherLang %>../js/intersectionObservers.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbar.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= otherLang %>../js/mapPorto.js"></script>
+            <script src="<%= otherLang %>../js/language.js"></script>
 </body>
 
 </html>
