--- a/ejs/gallery.ejs
+++ b/ejs/gallery.ejs
@@ -17,6 +17,7 @@
                           CONTENT
 =========================================================-->
         <section id="content">
+            <div class="overlay"></div>
             <div class="wrapper1">
                 <div class="heading1 fade-in">
                     <h2>
@@ -31,7 +32,7 @@
             </div>
             <div class="box6-wrapper1">
                 <div class="box6 img1 fade-in">
-                    <img src="<%= en %>../images/EVO_1662.jpg" alt="Sala de Espera" />
+                    <img src="<%= otherLang %>../images/EVO_1662.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -42,7 +43,7 @@
                     </span>
                 </div>
                 <div class="box6 img2 fade-in">
-                    <img src="<%= en %>../images/EVO_1675.jpg" alt="Sala de Espera" />
+                    <img src="<%= otherLang %>../images/EVO_1675.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -53,7 +54,7 @@
                     </span>
                 </div>
                 <div class="box6 img3 fade-in">
-                    <img src="<%= en %>../images/EVO_1687.jpg" alt="Sala de Espera" />
+                    <img src="<%= otherLang %>../images/EVO_1687.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -64,7 +65,7 @@
                     </span>
                 </div>
                 <div class="box6 img4 fade-in">
-                    <img src="<%= en %>../images/EVO_1711.jpg" alt="Corredor" />
+                    <img src="<%= otherLang %>../images/EVO_1711.jpg" alt="Corredor" />
                     <span class="img-content-hover">
                         <h4>
                             <%= gallery.images.area %>
@@ -72,7 +73,7 @@
                     </span>
                 </div>
                 <div class="box6 img5 fade-in">
-                    <img src="<%= en %>../images/EVO_1714.jpg" alt="Sala de Pediatria" />
+                    <img src="<%= otherLang %>../images/EVO_1714.jpg" alt="Sala de Pediatria" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -83,7 +84,7 @@
                     </span>
                 </div>
                 <div class="box6 img6 fade-in">
-                    <img src="<%= en %>../images/EVO_1720.jpg" alt="Sala de Pediatria" />
+                    <img src="<%= otherLang %>../images/EVO_1720.jpg" alt="Sala de Pediatria" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -94,7 +95,7 @@
                     </span>
                 </div>
                 <div class="box6 img7 fade-in">
-                    <img src="<%= en %>../images/EVO_1725.jpg" alt="Sala de Pediatria" />
+                    <img src="<%= otherLang %>../images/EVO_1725.jpg" alt="Sala de Pediatria" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -105,7 +106,7 @@
                     </span>
                 </div>
                 <div class="box6 img8 fade-in">
-                    <img src="<%= en %>../images/EVO_1732.jpg" alt="Sala de Exames" />
+                    <img src="<%= otherLang %>../images/EVO_1732.jpg" alt="Sala de Exames" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -116,7 +117,7 @@
                     </span>
                 </div>
                 <div class="box6 img9 fade-in">
-                    <img src="<%= en %>../images/EVO_1737.jpg" alt="Sala de Exames" />
+                    <img src="<%= otherLang %>../images/EVO_1737.jpg" alt="Sala de Exames" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -127,7 +128,7 @@
                     </span>
                 </div>
                 <div class="box6 img10 fade-in">
-                    <img src="<%= en %>../images/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= otherLang %>../images/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -138,7 +139,7 @@
                     </span>
                 </div>
                 <div class="box6 img11 fade-in">
-                    <img src="<%= en %>../images/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= otherLang %>../images/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -149,7 +150,7 @@
                     </span>
                 </div>
                 <div class="box6 img12 fade-in">
-                    <img src="<%= en %>../images/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= otherLang %>../images/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -160,7 +161,7 @@
                     </span>
                 </div>
                 <div class="box6 img13 fade-in">
-                    <img src="<%= en %>../images/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= otherLang %>../images/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -171,7 +172,7 @@
                     </span>
                 </div>
                 <div class="box6 img14 fade-in">
-                    <img src="<%= en %>../images/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= otherLang %>../images/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -182,7 +183,7 @@
                     </span>
                 </div>
                 <div class="box6 img15 fade-in">
-                    <img src="<%= en %>../images/EVO_1782.jpg" alt="Copa" />
+                    <img src="<%= otherLang %>../images/EVO_1782.jpg" alt="Copa" />
                     <span class="img-content-hover">
                         <h4>
                             <%= gallery.images.copa %>
@@ -190,7 +191,7 @@
                     </span>
                 </div>
                 <div class="box6 img16 fade-in">
-                    <img src="<%= en %>../images/EVO_1790.jpg" alt="Quarto de Banho" />
+                    <img src="<%= otherLang %>../images/EVO_1790.jpg" alt="Quarto de Banho" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.babyChangingRoom %>
@@ -201,7 +202,7 @@
                     </span>
                 </div>
                 <div class="box6 img17 fade-in">
-                    <img src="<%= en %>../images/EVO_1795.jpg" alt="Sala de Esterilização" />
+                    <img src="<%= otherLang %>../images/EVO_1795.jpg" alt="Sala de Esterilização" />
                     <span class="img-content-hover">
                         <h5>
                             <%= gallery.images.text %>
@@ -217,55 +218,55 @@
                 <div class="wrapper">
                     <div class="slides">
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1662.jpg" alt="Sala de Espera" />
+                            <img src="<%= otherLang %>../images/EVO_1662.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1675.jpg" alt="Sala de Espera" />
+                            <img src="<%= otherLang %>../images/EVO_1675.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1687.jpg" alt="Sala de Espera" />
+                            <img src="<%= otherLang %>../images/EVO_1687.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1711.jpg" alt="Corredor" />
+                            <img src="<%= otherLang %>../images/EVO_1711.jpg" alt="Corredor" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1714.jpg" alt="Sala de Pediatria" />
+                            <img src="<%= otherLang %>../images/EVO_1714.jpg" alt="Sala de Pediatria" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1720.jpg" alt="Sala de Pediatria" />
+                            <img src="<%= otherLang %>../images/EVO_1720.jpg" alt="Sala de Pediatria" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1725.jpg" alt="Sala de Pediatria" />
+                            <img src="<%= otherLang %>../images/EVO_1725.jpg" alt="Sala de Pediatria" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1732.jpg" alt="Sala de Exames" />
+                            <img src="<%= otherLang %>../images/EVO_1732.jpg" alt="Sala de Exames" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1737.jpg" alt="Sala de Exames" />
+                            <img src="<%= otherLang %>../images/EVO_1737.jpg" alt="Sala de Exames" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= otherLang %>../images/EVO_1744.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= otherLang %>../images/EVO_1747.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= otherLang %>../images/EVO_1750.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= otherLang %>../images/EVO_1755.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= otherLang %>../images/EVO_1768.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1782.jpg" alt="Copa" />
+                            <img src="<%= otherLang %>../images/EVO_1782.jpg" alt="Copa" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1790.jpg" alt="Quarto de Banho" />
+                            <img src="<%= otherLang %>../images/EVO_1790.jpg" alt="Quarto de Banho" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1795.jpg" alt="Sala de Esterilização" />
+                            <img src="<%= otherLang %>../images/EVO_1795.jpg" alt="Sala de Esterilização" />
                         </span>
                     </div>
                 </div>
@@ -277,13 +278,13 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="<%= en %>../js/app.js"></script>
-            <script src="<%= en %>../js/intersectionObservers.js"></script>
-            <script src="<%= en %>../js/headerNavbar.js"></script>
-            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
-            <script src="<%= en %>../js/carousel.js"></script>
-            <script src="<%= en %>../js/gallery.js"></script>
-            <script src="<%= en %>../js/languange.js"></script>
+            <script src="<%= otherLang %>../js/app.js"></script>
+            <script src="<%= otherLang %>../js/intersectionObservers.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbar.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= otherLang %>../js/carousel.js"></script>
+            <script src="<%= otherLang %>../js/gallery.js"></script>
+            <script src="<%= otherLang %>../js/language.js"></script>
 </body>
 
 </html>
