--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -18,6 +18,7 @@
                           CONTENT
 =========================================================-->
             <section id="content">
+                <div class="overlay"></div>
                 <div class="img-container">
                     <div class="teaser">
                         <span class="first">
@@ -33,17 +34,17 @@
             <div class="slider">
                 <div class="wrapper">
                     <div class="slides">
-                        <span class="slide"><img src="<%= en %>../images/page4_img4.png" alt="" >
+                        <span class="slide"><img src="<%= otherLang %>../images/page4_img4.png" alt="" >
                             <h2 class="sliderText gine">
                                 <a href="specialties">Ginecologia</a>
                             </h2>
                         </span>
-                        <span class="slide"><img src="<%= en %>../images/page1_img1.png" alt="" >
+                        <span class="slide"><img src="<%= otherLang %>../images/page1_img1.png" alt="" >
                             <h2 class="sliderText obs">
                                 <a href="specialties">Obstetrícia</a>
                             </h2>
                         </span>
-                        <span class="slide"><img src="<%= en %>../images/page1_img2.png" alt="" >
+                        <span class="slide"><img src="<%= otherLang %>../images/page1_img2.png" alt="" >
                             <h2 class="sliderText ped">
                                 <a href="specialties">Pediatria</a>
                             </h2>
@@ -62,7 +63,7 @@
                     </div>
                     <div class="box4-wrapper1">
                         <div class="box4">
-                            <img class="fade-in" src="<%= en %>../images/page2_img1.png" alt="">
+                            <img class="fade-in" src="<%= otherLang %>../images/page2_img1.png" alt="">
                             <h6 class="fade-in">
                                 <%= index.mission.first %>
                             </h6>
@@ -81,7 +82,7 @@
                     <div class="box3-wrapper1">
                         <div class="box3 fade-in">
                             <a href="mca.html">
-                                <img src="<%= en %>../images/mca.jpg" alt="">
+                                <img src="<%= otherLang %>../images/mca.jpg" alt="">
                             </a>
                             <h3><a href="mca.html">
                                     <%= index.team.mca.name %>
@@ -93,7 +94,7 @@
 
                         <div class="box3 fade-in">
                             <a href="gv.html">
-                                <img src="<%= en %>../images/gv.jpg" alt="">
+                                <img src="<%= otherLang %>../images/gv.jpg" alt="">
                             </a>
                             <h3><a href="gv.html">
                                     <%= index.team.gv.name %>
@@ -104,7 +105,7 @@
                         </div>
 
                         <div class="box3 fade-in">
-                            <a href="ac.html"><img src="<%= en %>../images/profile.png" alt=""></a>
+                            <a href="ac.html"><img src="<%= otherLang %>../images/profile.png" alt=""></a>
                             <h3>
                                 <a href="ac.html">
                                     <%= index.team.ac.name %>
@@ -117,7 +118,7 @@
 
                         <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                             <a href="lc.html">
-                                <img src="<%= en %>../images/lc.jpg" alt="">
+                                <img src="<%= otherLang %>../images/lc.jpg" alt="">
                             </a>
                             <h3><a href="lc.html">
                                     <%= index.team.lc.name %>
@@ -127,7 +128,7 @@
                             </p>
                         </div>
                         <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <a href="ds.html"><img src="<%= en %>../images/profile.png" alt=""></a>
+                            <a href="ds.html"><img src="<%= otherLang %>../images/profile.png" alt=""></a>
                             <h3>
                                 <a href="ds.html">
                                     <%= index.team.ds.name %>
@@ -138,7 +139,7 @@
                             </p>
                         </div>
                         <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <a href="mb.html"><img src="<%= en %>../images/profile.png" alt=""></a>
+                            <a href="mb.html"><img src="<%= otherLang %>../images/profile.png" alt=""></a>
                             <h3>
                                 <a href="mb.html">
                                     <%= index.team.mb.name %>
@@ -149,7 +150,7 @@
                             </p>
                         </div>
                         <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <img src="<%= en %>../images/profile.png" alt="">
+                            <img src="<%= otherLang %>../images/profile.png" alt="">
                             <h3>
                                 <a>
                                     <%= index.team.fg.name %>
@@ -160,7 +161,7 @@
                             </p>
                         </div>
                         <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <img src="<%= en %>../images/profile.png" alt="">
+                            <img src="<%= otherLang %>../images/profile.png" alt="">
                             <h3>
                                 <a>
                                     <%= index.team.fa.name %>
@@ -260,12 +261,12 @@
                           FOOTER
 =========================================================-->
             <%- include("parcials/footer") %>
-                <script src="<%= en %>../js/app.js"></script>
-                <script src="<%= en %>../js/intersectionObservers.js"></script>
-                <script src="<%= en %>../js/headerNavbar.js"></script>
-                <script src="<%= en %>../js/headerNavbarButtons.js"></script>
-                <script src="<%= en %>../js/scrollDown.js"></script>
-                <script src="<%= en %>../js/languange.js"></script>
+                <script src="<%= otherLang %>../js/app.js"></script>
+                <script src="<%= otherLang %>../js/intersectionObservers.js"></script>
+                <script src="<%= otherLang %>../js/headerNavbar.js"></script>
+                <script src="<%= otherLang %>../js/headerNavbarButtons.js"></script>
+                <script src="<%= otherLang %>../js/scrollDown.js"></script>
+                <script src="<%= otherLang %>../js/language.js"></script>
     </body>
 
     </html>
