--- a/ejs/parcials/header.ejs
+++ b/ejs/parcials/header.ejs
@@ -94,37 +94,37 @@
                 </a>
                 <div class="dropdown dropdownAgreements">
                     <ul>
-                        <li><img src="<%= en %>../images/advanceCare_logo.png" alt="Advancecare Logo">
+                        <li><img src="<%= otherLang %>../images/advanceCare_logo.png" alt="Advancecare Logo">
                             <a href="agreements.html#advanceCare">
                                 <%= header.agreements.advanceCare %>
                             </a>
                         </li>
-                        <li><img src="<%= en %>../images/allianz_logo.png" alt="Allianz Logo">
+                        <li><img src="<%= otherLang %>../images/allianz_logo.png" alt="Allianz Logo">
                             <a href="agreements.html#allianz">
                                 <%= header.agreements.allianz %>
                             </a>
                         </li>
-                        <li><img src="<%= en %>../images/fh_logo.png" alt="Future Healthcare Logo">
+                        <li><img src="<%= otherLang %>../images/fh_logo.png" alt="Future Healthcare Logo">
                             <a href="agreements.html#furureHealth">
                                 <%= header.agreements.futureHealthcare %>
                             </a>
                         </li>
-                        <li><img src="<%= en %>../images/medicare_logo.png" alt="Medicare Logo">
+                        <li><img src="<%= otherLang %>../images/medicare_logo.png" alt="Medicare Logo">
                             <a href="agreements.html#medicare">
                                 <%= header.agreements.medicare %>
                             </a>
                         </li>
-                        <li><img src="<%= en %>../images/medis_logo.png" alt="Médis Logo">
+                        <li><img src="<%= otherLang %>../images/medis_logo.png" alt="Médis Logo">
                             <a href="agreements.html#medis">
                                 <%= header.agreements.medis %>
                             </a>
                         </li>
-                        <li><img src="<%= en %>../images/rna_logo.png" alt="RNA Logo">
+                        <li><img src="<%= otherLang %>../images/rna_logo.png" alt="RNA Logo">
                             <a href="agreements.html#rna">
                                 <%= header.agreements.rna %>
                             </a>
                         </li>
-                        <li><img src="<%= en %>../images/sib_logo.png" alt="SAMS/SIB Logo">
+                        <li><img src="<%= otherLang %>../images/sib_logo.png" alt="SAMS/SIB Logo">
                             <a href="agreements.html#samsSib">
                                 <%= header.agreements.samsSib %>
                             </a>
@@ -166,6 +166,30 @@
                         </li>
                     </ul>
                 </div>
+            </li>
+            <li class="languageButton">
+                <div class="langNavButton">
+                    <div class="langLineTop"></div>
+                    <div class="langLineBottom"></div>
+                </div>
+                <div class="inicialLang">
+                    <i class="fas fa-globe"></i>
+                    <p class="language">
+                        <%= footer.languages %>
+                    </p>
+                </div>
+                <ul class="languageList">
+                    <li><a class="PT" href=""><img src="<%= otherLang %>../images/portugal.png" alt="Flag of Portugal">
+                            <%= footer.pt %>
+                        </a></li>
+                    <li><a class="ES" href=""><img src="<%= otherLang %>../images/spain.png" alt="Flag of Spain">
+                            <%= footer.es %>
+                        </a>
+                    </li>
+                    <li><a class="EN" href=""><img src="<%= otherLang %>../images/uk.png" alt="Flag of UK">
+                            <%= footer.en %>
+                        </a></li>
+                </ul>
             </li>
             <ul class="socials2">
                 <li class="fade-in">
