--- a/ejs/privacy.ejs
+++ b/ejs/privacy.ejs
@@ -17,6 +17,7 @@
                           CONTENT
 =========================================================-->
         <section id="content" class="common">
+            <div class="overlay"></div>
             <div class="wrapper1 wrapper1__inset4">
                 <div class="heading1 fadeIn">
                     <h2>
@@ -27,7 +28,7 @@
                     <div class="box7 fadeIn">
                         <p>
                             <%= privacy.p1 %>
-                                <a href=https://clinicagynebe.com.pt>
+                                <a href=#>
                                     <%= privacy.name %>
                                 </a>
                                 <%= privacy.p2 %>
@@ -46,7 +47,7 @@
                         </p>
                         <p>
                             <%= privacy.p6 %>
-                                <a href='https://politicaprivacidade.com' target='_BLANK'>
+                                <a href="privacy.html" target='_BLANK'>
                                     <%= privacy.pp %>
                                 </a>
                         </p>
@@ -93,11 +94,11 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="<%= en %>../js/app.js"></script>
-            <script src="<%= en %>../js/intersectionObservers.js"></script>
-            <script src="<%= en %>../js/headerNavbar.js"></script>
-            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
-            <script src="<%= en %>../js/languange.js"></script>
+            <script src="<%= otherLang %>../js/app.js"></script>
+            <script src="<%= otherLang %>../js/intersectionObservers.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbar.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= otherLang %>../js/language.js"></script>
 </body>
 
 </html>
