--- a/ejs/specialties.ejs
+++ b/ejs/specialties.ejs
@@ -36,7 +36,7 @@
                 <div class="box5-wrapper1">
                     <div id="gyne" class="box5">
                         <a href="mca.html">
-                            <img class="fade-in" src="<%= en %>../images/gyne.png" alt="">
+                            <img class="fade-in" src="<%= otherLang %>../images/gyne.png" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
                             <a href="mca.html">
@@ -85,7 +85,7 @@
                     </div>
                     <div id="obs" class="box5">
                         <a href="mca.html">
-                            <img class="fade-in" src="<%= en %>../images/page3_img2.png" alt="">
+                            <img class="fade-in" src="<%= otherLang %>../images/page3_img2.png" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
                             <a href="mca.html">
@@ -132,7 +132,7 @@
 
                     <div id="ped" class="box5">
                         <a href="gv.html">
-                            <img class="fade-in" src="<%= en %>../images/pediatrics.jpg" alt="">
+                            <img class="fade-in" src="<%= otherLang %>../images/pediatrics.jpg" alt="">
                         </a>
                         <h3 class="h3__inset2 fade-in">
                             <a href="gv.html">
@@ -168,7 +168,7 @@
 
                     <div id="endo" class="box5">
                         <a href="lc.html">
-                            <img class="fade-in" src="<%= en %>../images/endo.jpg" alt="">
+                            <img class="fade-in" src="<%= otherLang %>../images/endo.jpg" alt="">
                         </a>
                         <h3 class="h3__inset3 fade-in">
                             <a href="lc.html">
@@ -212,7 +212,7 @@
                     </div>
                     <div id="psy" class="box5">
                         <a href="mb.html">
-                            <img class="fade-in" src="<%= en %>../images/psychologist.jpg" alt="">
+                            <img class="fade-in" src="<%= otherLang %>../images/psychologist.jpg" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
                             <a href="mb.html">
@@ -264,7 +264,7 @@
                     </div>
                     <div id="nut" class="box5">
                         </li>
-                        <a href="ds.html"><img class="fade-in" src="<%= en %>../images/nutrition.jpg" alt=""></a>
+                        <a href="ds.html"><img class="fade-in" src="<%= otherLang %>../images/nutrition.jpg" alt=""></a>
                         <h3 class="h3__inset2 fade-in">
                             <a href="ds.html">
                                 <%= specialties.nut.title %>
@@ -337,12 +337,12 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="<%= en %>../js/app.js"></script>
-            <script src="<%= en %>../js/intersectionObservers.js"></script>
-            <script src="<%= en %>../js/headerNavbar.js"></script>
-            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
-            <script src="<%= en %>../js/buttonOnSpecialties.js"></script>
-            <script src="<%= en %>../js/languange.js"></script>
+            <script src="<%= otherLang %>../js/app.js"></script>
+            <script src="<%= otherLang %>../js/intersectionObservers.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbar.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= otherLang %>../js/buttonOnSpecialties.js"></script>
+            <script src="<%= otherLang %>../js/language.js"></script>
 </body>
 
 </html>
