--- a/ejs/agreements.ejs
+++ b/ejs/agreements.ejs
@@ -17,6 +17,7 @@
                           CONTENT
 =========================================================-->
         <section id="content">
+            <div class="overlay"></div>
             <div class="wrapper6">
                 <div class="heading1 fade-in">
                     <h2>
@@ -28,7 +29,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://advancecare.pt/" target="_blank">
-                            <img src="<%= en %>../images/advancecare.png"
+                            <img src="<%= otherLang %>../images/advancecare.png"
                                 alt="AdvanceCare - Gestão de Serviços de Saúde, S.A." />
                         </a>
                         <div class="title">
@@ -51,72 +52,75 @@
                 </div>
                 <div class="box2-wrapper6">
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/acoreana.png" alt="Açoreana" />
+                        <img src="<%= otherLang %>../images/acoreana.png" alt="Açoreana" />
                         <p>&brvbar Açoreana</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/ccmo.jpg" alt="CCMO-MUTUELLE" />
+                        <img src="<%= otherLang %>../images/ccmo.jpg" alt="CCMO-MUTUELLE" />
                         <p>&brvbar CCMO-MUTUELLE</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/cimpor.png" alt="Cimpor - Cimentos de Portugal, S.A." />
+                        <img src="<%= otherLang %>../images/cimpor.png" alt="Cimpor - Cimentos de Portugal, S.A." />
                         <p>&brvbar Cimpor - Cimentos de Portugal, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/eurovida.jpg" alt="Eurovida – Companhia de Seguros de Vida, S.A" />
+                        <img src="<%= otherLang %>../images/eurovida.jpg"
+                            alt="Eurovida – Companhia de Seguros de Vida, S.A" />
                         <p>&brvbar Eurovida – Companhia de Seguros de Vida, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/generali.png" alt="Generalicare" />
+                        <img src="<%= otherLang %>../images/generali.png" alt="Generalicare" />
                         <p>&brvbar Generalicare - Companhia de Seguros, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/gnb.png" alt="GNB - Companhia de Seguros, S.A" />
+                        <img src="<%= otherLang %>../images/gnb.png" alt="GNB - Companhia de Seguros, S.A" />
                         <p>&brvbar GNB - Companhia de Seguros, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/gps.jpg" alt="Grumo Groupama" />
+                        <img src="<%= otherLang %>../images/gps.jpg" alt="Grumo Groupama" />
                         <p>&brvbar Grupo Groupama</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/logo.jpg" alt="Logo" />
+                        <img src="<%= otherLang %>../images/logo.jpg" alt="Logo" />
                         <p>&brvbar Logo Seguros</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/lusitania.png" alt="Lusitania - Companhia de Seguros, S.A." />
+                        <img src="<%= otherLang %>../images/lusitania.png"
+                            alt="Lusitania - Companhia de Seguros, S.A." />
                         <p>&brvbar Lusitania - Companhia de Seguros, S.A.</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/mgen.png"
+                        <img src="<%= otherLang %>../images/mgen.png"
                             alt="MGEN - Mutuelle Générale de l'Éducation Nationale" />
                         <p>&brvbar MGEN - Mutuelle Générale de l'Éducation Nationale</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/n_seguros.png" alt="N Seguros, S.A" />
+                        <img src="<%= otherLang %>../images/n_seguros.png" alt="N Seguros, S.A" />
                         <p>&brvbar N Seguros, S.A</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/popular.png" alt="Popular Seguros- Companhia de Seguros, S.A. " />
+                        <img src="<%= otherLang %>../images/popular.png"
+                            alt="Popular Seguros- Companhia de Seguros, S.A. " />
                         <p>&brvbar Popular Seguros- Companhia de Seguros, S.A. </p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/real.png" alt="Real Vida Seguros" />
+                        <img src="<%= otherLang %>../images/real.png" alt="Real Vida Seguros" />
                         <p>&brvbar Real Vida Seguros</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/sams.png"
+                        <img src="<%= otherLang %>../images/sams.png"
                             alt="SAMS - Serviços de Assistência Médico-Social do Sindicato dos Bancários Sul e Ilhas" />
                         <p>&brvbar SAMS - Serviços de Assistência Médico-Social do Sindicato dos Bancários</p>
                     </div>
                     <div id="allianz" class="insurence fade-in">
-                        <img src="<%= en %>../images/tranquilidade.png" alt="Tranquilidade" />
+                        <img src="<%= otherLang %>../images/tranquilidade.png" alt="Tranquilidade" />
                         <p>&brvbar Tranquilidade</p>
                     </div>
                 </div>
                 <div id="furureHealth" class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.allianz.pt/" target="_blank"></a>
-                        <img src="<%= en %>../images/allianz.png" alt="Allianz Saúde" />
+                        <img src="<%= otherLang %>../images/allianz.png" alt="Allianz Saúde" />
                         <div class="title">
                             <h3 class="h3__inset1">
                                 <%= agreements.allianz.title %>
@@ -132,7 +136,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.future-healthcare.pt/victoria/rm/rede-medica.html" target="_blank">
-                            <img src="<%= en %>../images/future.png" alt="Future Healthcare" />
+                            <img src="<%= otherLang %>../images/future.png" alt="Future Healthcare" />
                         </a>
                         <div class="title">
                             <h3 class="h3_inset1">
@@ -156,18 +160,18 @@
                 </div>
                 <div class="box2-wrapper6">
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/saude.png" alt="Saúde Prime" />
+                        <img src="<%= otherLang %>../images/saude.png" alt="Saúde Prime" />
                         <p>&brvbar Saúde Prime</p>
                     </div>
                     <div id="medicare" class="insurence fade-in">
-                        <img src="<%= en %>../images/victoria.png" alt="Victoria" />
+                        <img src="<%= otherLang %>../images/victoria.png" alt="Victoria" />
                         <p>&brvbar Victoria</p>
                     </div>
                 </div>
                 <div id="medis" class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="https://www.medicare.pt/" target="_blank">
-                            <img src="<%= en %>../images/medicare.jpg" alt="Medicare" />
+                            <img src="<%= otherLang %>../images/medicare.jpg" alt="Medicare" />
                         </a>
                         <div class="title">
                             <h3 class="h3__inset1">
@@ -184,7 +188,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.medis.pt/pt-pt/Pages/default.aspx" target="_blank">
-                            <img src="<%= en %>../images/medis.png"
+                            <img src="<%= otherLang %>../images/medis.png"
                                 alt="Médis - Companhia Portuguesa de Seguros de Saúde, S.A." />
                         </a>
                         <div class="title">
@@ -208,26 +212,26 @@
                 </div>
                 <div class=" box2-wrapper6">
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/ageas.png" alt="Ageas Seguros" />
+                        <img src="<%= otherLang %>../images/ageas.png" alt="Ageas Seguros" />
                         <p>&brvbar Ageas Seguros</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/ctt.png" alt="CTT - Médis" />
+                        <img src="<%= otherLang %>../images/ctt.png" alt="CTT - Médis" />
                         <p>&brvbar CTT - Médis</p>
                     </div>
                     <div class="insurence fade-in">
-                        <img src="<%= en %>../images/liberty.png" alt="Liberty Seguros" />
+                        <img src="<%= otherLang %>../images/liberty.png" alt="Liberty Seguros" />
                         <p>&brvbar Liberty Seguros</p>
                     </div>
                     <div id="rna" class="insurence fade-in">
-                        <img src="<%= en %>../images/zurich.png" alt="Zurich" />
+                        <img src="<%= otherLang %>../images/zurich.png" alt="Zurich" />
                         <p>&brvbar Zurich</p>
                     </div>
                 </div>
                 <div id="samsSib" class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.rnamedical.pt/pt/home/" target="_blank">
-                            <img src="<%= en %>../images/rna.png" alt="RNA Medical" />
+                            <img src="<%= otherLang %>../images/rna.png" alt="RNA Medical" />
                         </a>
                         <div class="title">
                             <h3>
@@ -245,7 +249,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="http://www.sibanca.pt/" target="_blank">
-                            <img src="<%= en %>../images/sams_sib.png" alt="SAMS-SIB" />
+                            <img src="<%= otherLang %>../images/sams_sib.png" alt="SAMS-SIB" />
                         </a>
                         <div class="title">
                             <h3 class="h3__inset1">
@@ -262,7 +266,7 @@
                 <div class="box2-wrapper1">
                     <div class="insurence fade-in">
                         <a href="https://ami.org.pt/" target="_blank">
-                            <img src="<%= en %>../images/ami.png" alt="Assistência Médica Internacional" />
+                            <img src="<%= otherLang %>../images/ami.png" alt="Assistência Médica Internacional" />
                         </a>
                         <div class="title">
                             <h3 class="h3__inset1">
@@ -282,12 +286,12 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="<%= en %>../js/app.js"></script>
-            <script src="<%= en %>../js/intersectionObservers.js"></script>
-            <script src="<%= en %>../js/headerNavbar.js"></script>
-            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
-            <script src="<%= en %>../js/buttonOnAgreements.js"></script>
-            <script src="<%= en %>../js/languange.js"></script>
+            <script src="<%= otherLang %>../js/app.js"></script>
+            <script src="<%= otherLang %>../js/intersectionObservers.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbar.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= otherLang %>../js/buttonOnAgreements.js"></script>
+            <script src="<%= otherLang %>../js/language.js"></script>
 </body>
 
 </html>
