--- a/ejs/galleryST.ejs
+++ b/ejs/galleryST.ejs
@@ -17,6 +17,7 @@
                           CONTENT
 =========================================================-->
         <section id="content">
+            <div class="overlay"></div>
             <div class="wrapper1">
                 <div class="heading1 fade-in">
                     <h2>
@@ -31,7 +32,7 @@
             </div>
             <div class="box6-wrapper1__inset1">
                 <div class="box6 img18 fade-in">
-                    <img src="<%= en %>../images/EVO_1810.jpg" alt="Sala de Espera" />
+                    <img src="<%= otherLang %>../images/EVO_1810.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -42,7 +43,7 @@
                     </span>
                 </div>
                 <div class="box6 img19 fade-in">
-                    <img src="<%= en %>../images/EVO_1813.jpg" alt="Sala de Espera" />
+                    <img src="<%= otherLang %>../images/EVO_1813.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -53,7 +54,7 @@
                     </span>
                 </div>
                 <div class="box6 img20 fade-in">
-                    <img src="<%= en %>../images/EVO_1818.jpg" alt="Sala de Espera" />
+                    <img src="<%= otherLang %>../images/EVO_1818.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -64,7 +65,7 @@
                     </span>
                 </div>
                 <div class="box6 img21 fade-in">
-                    <img src="<%= en %>../images/EVO_1826.jpg" alt="Logo" />
+                    <img src="<%= otherLang %>../images/EVO_1826.jpg" alt="Logo" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.logoText %>
@@ -75,7 +76,7 @@
                     </span>
                 </div>
                 <div class="box6 img22 fade-in">
-                    <img src="<%= en %>../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= otherLang %>../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -86,7 +87,7 @@
                     </span>
                 </div>
                 <div class="box6 img23 fade-in">
-                    <img src="<%= en %>../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= otherLang %>../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -97,7 +98,7 @@
                     </span>
                 </div>
                 <div class="box6 img24 fade-in">
-                    <img src="<%= en %>../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                    <img src="<%= otherLang %>../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
                         <h5>
                             <%= galleryST.images.text %>
@@ -113,25 +114,25 @@
                 <div class="wrapper">
                     <div class="slides">
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1810.jpg" alt="Sala de Espera" />
+                            <img src="<%= otherLang %>../images/EVO_1810.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1813.jpg" alt="Sala de Espera" />
+                            <img src="<%= otherLang %>../images/EVO_1813.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1818.jpg" alt="Sala de Espera" />
+                            <img src="<%= otherLang %>../images/EVO_1818.jpg" alt="Sala de Espera" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1826.jpg" alt="Logo" />
+                            <img src="<%= otherLang %>../images/EVO_1826.jpg" alt="Logo" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= otherLang %>../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= otherLang %>../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                         <span class="slide">
-                            <img src="<%= en %>../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
+                            <img src="<%= otherLang %>../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                         </span>
                     </div>
                 </div>
@@ -143,13 +144,13 @@
                           FOOTER
 =========================================================-->
         <%- include("parcials/footer") %>
-            <script src="<%= en %>../js/app.js"></script>
-            <script src="<%= en %>../js/intersectionObservers.js"></script>
-            <script src="<%= en %>../js/headerNavbar.js"></script>
-            <script src="<%= en %>../js/headerNavbarButtons.js"></script>
-            <script src="<%= en %>../js/carousel.js"></script>
-            <script src="<%= en %>../js/galleryST.js"></script>
-            <script src="<%= en %>../js/languange.js"></script>
+            <script src="<%= otherLang %>../js/app.js"></script>
+            <script src="<%= otherLang %>../js/intersectionObservers.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbar.js"></script>
+            <script src="<%= otherLang %>../js/headerNavbarButtons.js"></script>
+            <script src="<%= otherLang %>../js/carousel.js"></script>
+            <script src="<%= otherLang %>../js/galleryST.js"></script>
+            <script src="<%= otherLang %>../js/language.js"></script>
 </body>
 
 </html>
