--- a/ejs/parcials/head.ejs
+++ b/ejs/parcials/head.ejs
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- build:css({.tmp,src}) css/style.css -->
-<link rel="stylesheet" href="<%= en %>../css/reset.css">
-<link rel="stylesheet" href="<%= en %>../css/styles.css">
+<link rel="stylesheet" href="<%= otherLang %>../css/reset.css">
+<link rel="stylesheet" href="<%= otherLang %>../css/styles.css">
 <!-- endbuild -->
 <script src="https://kit.fontawesome.com/9e78371ef2.js" crossorigin="anonymous"></script>
